--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="css/jquery.fancybox-1.3.4.css" type="text/css" />
 
     <!--[if lt IE 9]>
-	    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+	    <script src="js/html5shiv.js"></script>
     <![endif]-->
 
 </head>
@@ -244,7 +244,7 @@
 </footer>
 
 <!-- scripts -->
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6/jquery.min.js"></script>
+<script src="js/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="js/jquery-1.6.1.min.js"><\/script>')</script>
 
 <script src="js/jquery.smoothscroll.js"></script>
