--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <meta charset="utf-8"/>
     <meta name="description" content="">
     <meta name="author" content="">
+    
+    <link rel="icon" type="image/png" href="images/favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="images/favicon-16x16.png" sizes="16x16" />
+
 
     <title>Falconweb</title>
 
