--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <meta name="description" content="">
     <meta name="author" content="">
     
+    <link rel="shortcut icon" href="images/favicon.ico" />
+    <link rel="icon" type="image/ico" href="images/favicon.ico" />
     <link rel="icon" type="image/png" href="images/favicon-32x32.png" sizes="32x32" />
     <link rel="icon" type="image/png" href="images/favicon-16x16.png" sizes="16x16" />
 
