--- a/index.html
+++ b/index.html
@@ -214,6 +214,7 @@
           <h2><img src="images/icon-rate.png" width="18" height="18" alt=""/> Fees &amp; Hourly Rate</h2>
 
                 <p>We don't employ any complicated formulae to calculate what you'll be charged. Our rate for all work completed is charged at the hourly rate of <strong>$60/hour</strong>, in half-hour increments.</p>
+				<p><strong>NOTE:</strong> For volunteer / non-profit organizations, our hourly rate drops to <strong>$45/hour</strong>.</p>
                 <h2><img src="images/icon-www.png" width="18" height="18" alt=""/> Website Hosting</h2>
                 <p> Looking for reliable website host? If you need a full service Internet company that can provide professional, high-performance Internet business solutions for small to medium-sized companies, try <a href="http://www.worldwideweb.ca/" target="new">WorldWideWeb Manitoba's </a><a href="http://webhosting.worldwideweb.ca/" target="new" class="sign-up-btn">Hosting Plans</a>.</p>
         </div>
