--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             </section>
 
             <section class="col">
-                <h2>Design and Development</h2>
+                <h2>Design &amp; Development</h2>
 
                 <p>Being small enables us to work efficiently and effectively, to offer high calibre design and development solutions at competitive prices.</p>
             </section>
@@ -127,17 +127,17 @@
                 <section class="col">
                     <h2>Web Design</h2>
 
-                    <p><img class="align-left" alt="" src="images/svc-web-design.png" />Our designs are created with the end-user in mind. We won't design a site that relies on the assumption that all of your viewers will have high-speed internet connectivity as is required to view some of today's  multimedia-choked websites. You'll be assisted from design concept &amp;  development, through to posting your new website to the web space provider of your choice.</p>
+                    <p><img class="align-left" alt="website design icon" src="images/svc-web-design.png" />Our website designs are created with the end-user in mind. We do not design websites that rely on the assumption that your viewers all have high-speed internet connections. We will assist you from design concept to development, through to posting your new website to the web space provider (host) of your choice. Check out our <a href="#portfolio">Featured</a> website work below.</p>
                 </section>
                 <section class="col mid">
                     <h2>Photo Restoration</h2>
-                    <p><img class="align-left" alt="" src="images/svc-photo-restore.png" />Typically these are old photos that you or your grandparents have hung on to that are sitting in a shoebox somewhere or a photo album tucked away &amp; forgotten.  As they've aged, these photos are probably yellowed &amp; torn with multiple  scratches and other miscellaneous marks on them. Once scanned, we'll do our best to restore the photo's original black &amp; white or colour quality.</p>
+                    <p><img class="align-left" alt="photo restore icon" src="images/svc-photo-restore.png" />You have old photos that you or your grandparents have hung on to that are sitting in a shoebox somewhere or a photo album tucked away &amp; forgotten. As those photos age, they've possibly yellowed &amp; torn with multiple scratches and other miscellaneous marks on them. Once scanned, we'll do our best to restore the photo's original black &amp; white or colour quality.</p>
                 </section>
 
                 <section class="col">
-                    <h2>Video Conversions</h2>
+                    <h2>Video Conversion</h2>
 
-                    <p><img class="align-left" alt="" src="images/svc-video-convert.png" />We'll bet you don't want to lose all those memories you have stored away on 8mm film, old VHS tapes or your many photo albums? In most cases we're able to  transfer those  8mm films, VHS tapes &amp; photos to DVD format. As an added bonus, we can enhance your old video collection &amp;  jazz it up some, by  adding all sorts of extras such as titling, transitions &amp; background music.</p>
+                    <p><img class="align-left" alt="video convert icon" src="images/svc-video-convert.png" />You don't want to lose all those memories you have stored away on 8mm film, VHS tape or your many photo albums? In most cases we're able to transfer 8mm film, VHS tape &amp; photos to DVD format. As an added bonus, we can enhance your existing video collection &amp; jazz it up some, by adding all sorts of extras such as titling, transitions &amp; background music.</p>
 
                 </section>
             </div>
@@ -207,26 +207,23 @@
 
         <div class="primary">
 
-                <p class="intro">Our primary business is providing website creation services to small &amp; medium-sized companies and individuals looking to develop a presence on the internet. While we don't dabble with sites such as eCommerce shopping or database-driven catalogs, we can certainly help you discover in what way you could become visible on the internet by means of a website.</p>
-                <p class="intro">You will be assisted throughout the website lifecycle... from design concept, to web page development, through to posting your new website to the web space provider of your choice.</p>
-                <p class="intro">You may also choose after the website has gone live to manage the  website maintenance yourself from your own PC... or you can continue to utilize our services to support your new site.</p>
+                <p class="intro">Our primary business is providing website creation services to small &amp; medium-sized companies and individuals looking to develop a presence on the internet. While we don't dabble with sites such as eCommerce shopping or database-driven catalogs, we can still help you discover how you can become visible on the internet through an established website.</p>
+                <p class="intro">We will assist you throughout the website lifecycle... from design concept, to web page development, through to posting your new website to the web space provider of your choice.</p>
+                <p class="intro">And after your website is live, you can either choose to continue to utilize our services to support &amp; maintain your new website, or look after the website yourself.</p>
 
           <h2><img src="images/icon-rate.png" width="18" height="18" alt=""/> Fees &amp; Hourly Rate</h2>
 
                 <p>We don't employ any complicated formulae to calculate what you'll be charged. Our rate for all work completed is charged at the hourly rate of <strong>$60/hour</strong>, in half-hour increments.</p>
 				<p><strong>NOTE:</strong> For volunteer / non-profit organizations, our hourly rate drops to <strong>$45/hour</strong>.</p>
                 <h2><img src="images/icon-www.png" width="18" height="18" alt=""/> Website Hosting</h2>
-                <p> Looking for reliable website host? If you need a full service Internet company that can provide professional, high-performance Internet business solutions for small to medium-sized companies, try <a href="http://www.worldwideweb.ca/" target="new">WorldWideWeb Manitoba's </a><a href="http://webhosting.worldwideweb.ca/" target="new" class="sign-up-btn">Hosting Plans</a>.</p>
+				<p>If you need a full service Internet company that can provide professional, high-performance Internet business solutions for small to medium-sized companies, try <a href="http://www.webmanitoba.com/webhosting/" target="_blank">World Wide Web Manitoba</a>.</p>
         </div>
     <aside>
               <div id="contact"></div>
               <h2>Contact Information</h2>
-      <p> <strong>ADDRESS:</strong><br>
-                Falconweb <br />
-                15 Playgreen Cres. <br />
-        Winnipeg, Manitoba<br>
-        R2P 1E4
-        </p>
+      <p> <strong>LOCATION:</strong><br>
+				Winnipeg, Manitoba
+      </p>
       <p> <strong>PHONE:</strong><br>
         204 230 5031</p>
       <p><strong>EMAIL:</strong><br>
