--- a/index.html
+++ b/index.html
@@ -78,12 +78,14 @@
             <div id="slider" class="nivoSlider">
                 <img src="images/slides/01-logo.png" width="383" height="198" alt="" />
                 <img src="images/slides/02-awesomeweb.png" width="383" height="198" alt="" />
-                <img src="images/slides/03-webdesign.png" width="383" height="198" alt="" />
+                <img src="images/slides/03-webdesign.jpg" width="383" height="198" alt="" />
+				<img src="images/slides/04-webdesign-02.jpg" width="383" height="198" alt="" />
+				<img src="images/slides/05-webdesign-03.jpg" width="383" height="198" alt="" />
             </div>
 			
-            <div id="htmlcaption" class="nivo-html-caption">
+            <!-- <div id="htmlcaption" class="nivo-html-caption">
                 <strong>This</strong> is an example of a <em>HTML</em> caption with <a href="#">a link</a>.
-            </div>
+            </div> -->
             
         </div>
 
