--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 				<p>An original, creative layout goes a long way to improving the user experience of a website, although not letting creativity get in the way of usability is important.</p>
             </section>
             <section class="col">
-                <h2>Design &amp; Development</h2>
+                <h2>Design</h2>
                 <p>Being small enables us to work efficiently and effectively, to offer high calibre design and development solutions at competitive prices.</p>
             </section>
         </div>
@@ -113,7 +113,7 @@
 		
 		<div class="row no-bottom-margin">
 			<section class="col">
-				<h2>Web Design</h2>
+				<h2>Website Design</h2>
 				<p><img class="align-left" alt="website design icon" src="images/svc-web-design.png" />Our website designs are created with the end-user in mind. We do not design websites that rely on the assumption that your viewers all have high-speed internet connections. We will assist you from design concept to development, through to posting your new website to the web space provider (host) of your choice. Check out our <a href="#portfolio">Featured</a> website work below.</p>
 			</section>
 			<section class="col mid">
@@ -177,8 +177,8 @@
 		
 		<h2><img src="images/icon-rate.png" width="18" height="18" alt=""/> Fees &amp; Hourly Rate</h2>
 
-		<p>We don't employ any complicated formulae to calculate what you'll be charged. Our rate for all work completed is charged at the hourly rate of <strong>$60/hour</strong>, in half-hour increments.</p>
-		<p><strong>NOTE:</strong> For volunteer / non-profit organizations, our hourly rate drops to <strong>$45/hour</strong>.</p>
+		<p>We don't employ any complicated formulae to calculate what you'll be charged. Our rate for all work completed is charged at the hourly rate of <strong>$65/hour</strong>, in quarter-hour increments.</p>
+		<p><strong>NOTE:</strong> For volunteer / non-profit organizations, our hourly rate is discounted by <strong>15%</strong>.</p>
 		<h2><img src="images/icon-www.png" width="18" height="18" alt=""/> Website Hosting</h2>
 		<p>If you need a full service Internet company that can provide professional, high-performance Internet business solutions for small to medium-sized companies, try <a href="http://www.webmanitoba.com/webhosting/" target="_blank">World Wide Web Manitoba</a>.</p>
 	</div>
